cargo-features = ["edition2024"] # must be on the first line 

[package]
name = "rs-notes"                # Имя вашего проекта
version = "0.1.0"                   # Версия проекта
edition = "2024"                    # Версия языка Rust (например, 2015, 2018, 2021)
description = "Заметки как в гугл докс"  # Краткое описание
license = "MIT"                     # Лицензия проекта
authors = ["Hedgeg <hedgeg@yandex.ru>"]  # Автор(ы) проекта

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
gloo-storage = "0.3"
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlElement", "Node", "Window"] }
